Upload profile pic

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -18,6 +18,10 @@
  
               </div>
                 <br />
+                
+              <div class="form-group">    
+                  <%= f.file_field :avatar %>
+              </div> 
  
               <div class="form-group">
  
