--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -21,7 +21,7 @@ data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
               aria-haspopup="true" aria-expanded="false">
-                <%= current_user.email %>
+                <%= image_tag avatar_url(current_user), class: "img-circle avatar-small" %> <%= current_user.fullname %>
               <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "My trips", root_path %></li>
