--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,8 +1,29 @@
-<div class="row">        
-    <div class="col-md-5 col-md-offset-3 text-center">            
-        <h2>Modify profil</h2>
+<div class="row">
+  <div class="col-md-3">
  
-          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+     <ul class="sidebar-list">
+ 
+          <li class="sidebar-item">
+ 
+               <%= link_to 'Modifier mon profil', edit_user_registration_path, class: 'sidebar-link active' %>
+ 
+          </li>
+ 
+     </ul>
+ 
+ <br>
+ 
+ <%= link_to 'Voir mon profil', user_path(current_user.id), class: 'btn btn-default wide' %>
+ 
+ </div>
+ 
+    <div class="col-md-7 text-center">  
+      <div class="panel panel-default">
+        <div class="panel-heading">My Profile</div>
+          <div class="panel-body">
+            <ul> You have to enter your password to change your profile.</ul>
+            <div class="container">
+              <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
             <%= devise_error_messages! %>
  
               <div class="form-group">
@@ -19,13 +40,37 @@
               </div>
                 <br />
                 
-              <div class="form-group">    
-                  <%= f.file_field :avatar %>
-              </div> 
+              <div class="row">
+ 
+                <div class="col-md-5">
+ 
+                  <div class="form-group">
+ 
+                   <span class="btn btn-default btn-file">
+ 
+                        Upload my profile pictures
+ 
+                        <%= f.file_field :avatar %>
+ 
+                   </span>
+ 
+                  </div>
+ 
+                </div>  
+ 
+              </div>
+              
+              <div class="form-group">
+                 <%= f.text_field :phone_number, class: "form-control", placeholder: "Phone number" %>
+              </div>
+              
+              <div class="form-group">
+                <%= f.text_area :description, rows:5, col:25, class: "form-control", placeholder: "My description" %>
+              </div>
  
               <div class="form-group">
  
-                <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "Enter New Password"  %>
+                <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "Enter New Password (if you want to change)"  %>
 
               </div>
  
@@ -49,5 +94,9 @@
  
               </div>
          <% end %>
+            </div>
+          </div>
+      </div>
+          
     </div>
 </div>
