--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -25,7 +25,7 @@ data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "My trips", root_path %></li>
-                <li><%= link_to 'Modifiy profil', edit_user_registration_path %></li>
+                <li><%= link_to 'Modifiy profile', edit_user_registration_path %></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to 'Deconnexion', destroy_user_session_path, 
 method: :delete %></li>
