--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,7 +24,7 @@
             <ul> You have to enter your password to change your profile.</ul>
             <div class="container">
               <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-            <%= devise_error_messages! %>
+                <%= render "shared/devise_errors" %>
  
               <div class="form-group">
                 <br />
