--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Workspace</title>
+  <title>AirBud</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <%= favicon_link_tag 'favicon.ico' %>
 </head>
 <body>
-<%= render 'layouts/navigation' %>
+
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+
+<%= render 'layouts/navigation' %>  
+<%= render 'shared/message' %>
 
 <div class="container"><%= yield %></div>
 
