Model photo creation

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -48,7 +48,7 @@
  
                    <span class="btn btn-default btn-file">
  
-                        Upload my profile pictures
+                        Upload my profile picture
  
                         <%= f.file_field :avatar %>
  
