modification controller photos

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,7 +15,7 @@ data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             
             <li>
              <%= link_to new_room_path do %>
-               <i class="fa fa-home fa-lg"></i> Devenez hôte
+               <i class="fa fa-home fa-lg"></i> Become host
              <% end %>
            </li>
             
