--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -371,3 +371,16 @@ input[type="checkbox"]:checked:before {
  color: #ff5a5f;
  
  }
+ 
+ .panel-heading.preview {
+ 
+         padding: 0;
+ 
+ }
+ 
+  
+.panel-heading.preview img{  
+ 
+          width: 100%;
+ 
+ }
