--- a/app/views/photos/_list.html.erb
+++ b/app/views/photos/_list.html.erb
@@ -13,6 +13,20 @@
                              <%= image_tag photo.image.url() %> 
  
                         </div>
+                        
+                        <div class="panel-body">
+ 
+                          <span class="pull-right">
+ 
+                              <%= link_to photo, remote: true, method: :delete, data: {confirm: "Are you sure you want to remove this photo?"} do %> Remove Photo
+ 
+                                   <i class="fa fa-times fa-lg"></i>
+ 
+                              <% end %>
+ 
+                          </span>
+ 
+ </div>
  
                   </div>
  
