--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -12,7 +12,7 @@
                     <div class="col-md-4 select">
                         <div class="form-group">
                             <label>Type of dwelling</label>
-                            <%= f.select :home_type, [["Home","Home"], ["Apartment","Apartment"], ["Villa","Villa"], ["Boat","Boat"],
+                            <%= f.select :home_type, [["Home","Home"], ["Apartment","Apartment"], ["Villa","Villa"], ["Boat","Boat"], ["Igloo","Igloo"],
                             ["Bed & Breakfast", "Bed & Breakfast"]], id: "home_type", 
                             prompt: "To select...", class: "form-control" %>
                         </div>
@@ -162,7 +162,7 @@
                       <%= f.submit "Valide my page", class: "btn btn-primary"%>
                     <% if controller.action_name == 'edit' && Rails.env.development? %>
                       <br /><br /><br />
-                      <%= link_to "Delete my casa", room_path(@room), method: :delete, data: {confirm: "Are you sure?"} %>
+                      <%= link_to "Delete my casa", room_path(@room), method: :delete, data: {confirm: "Are you sure? You are going to delete this casa."} %>
                     <% end %> 
             </div>
             <% end %>
