Ajout carousel Photos

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -384,3 +384,13 @@ input[type="checkbox"]:checked:before {
           width: 100%;
  
  }
+ 
+ .equipments li {
+        margin-bottom: 10px;
+        list-style-type: none;
+}
+ .text-line-through {
+      text-decoration: line-through
+ }
+ 
+
