geolocalisation et ajout ville

--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -75,10 +75,17 @@
                 
             <div class="row">
                     <div class="form-group">
-                        <label>Adress</label>
+                        <legend>Adress</legend>
                         <%= f.text_field :address, placeholder: "Where is your accommodation located?", class: "form-control" %>
                     </div>
                 </div>
+                
+            <div class="row">
+                    <div class="form-group">
+                            <%= f.text_field :city, placeholder: "City", class: "form-control" %>
+                    </div>
+            </div>
+                        
                 
             <div class="row">
                 <div class="col-md-4">
