ajout localisation à proximité

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -166,5 +166,39 @@
             </div>
         </div>
         
+        <!-- Logements à proximité -->
+ 
+ <h3>Near this location...</h3>
+ 
+ <div class="row">
+ 
+     <% for room in @room.nearbys(2).limit(3) %> #situé à 2 miles environ 3 km et limité à 3 annonces
+ 
+        <div class="col-md-4">
+ 
+            <div class="panel panel-default">
+ 
+               <div class="panel-heading preview">
+ 
+                    <%= image_tag room.photos[0].image.url(:medium) if room.photos.length > 0 %>
+ 
+               </div>
+ 
+               <div class="panel-body">
+ 
+                 <%= link_to room.listing_name, room %><br>
+ 
+                  (à <%= (room.distance*1.6).round(2) %> km)
+ 
+               </div>
+ 
+            </div>
+ 
+         </div>
+ 
+     <% end %>
+ 
+ </div>
+        
     </div>
 </div>
