Création model Reservation

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -172,7 +172,7 @@
  
  <div class="row">
  
-     <% for room in @room.nearbys(2).limit(3) %> #situé à 2 miles environ 3 km et limité à 3 annonces
+     <% for room in @room.nearbys(2).limit(3) %>
  
         <div class="col-md-4">
  
