--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,18 +1,58 @@
 <%= form_for([@room, @room.reservations.new]) do |f| %>     
  
-     <%= f.text_field :start_date %>                           
+ <div class="row">
+        <div class="col-md-12 price_tag">
+            <span>$ <%= @room.price %></span>
+            <span class="pull-right">Per night</span>
+        </div>
+    </div>
  
-     <%= f.text_field :end_date %>
+<div class="row">
+ 
+         <div class="col-md-6">
+ 
+         <label>Arrival</label>
+ 
+         <%= f.text_field :start_date, readonly: 'true', placeholder: 'dd/mm/aaaa', class: 'form-control' %>
+ 
+         </div>
+ 
+         <div class="col-md-6">
+ 
+         <label>Departure</label>
+ 
+         <%= f.text_field :end_date, readonly: 'true', placeholder: 'dd/mm/aaaa', class: 'form-control' %>
+ 
+         </div>
+ 
+ </div>
+ 
+ <div id="preview" style="display: none">
+       <table class="reservation-table" >
+               <tbody>
+                    <tr>
+                        <td>Night(s)</td>
+                        <td><span id="reservation_days"></span></td>
+                    </tr>
+                    <tr>
+                         <td>Total</td>
+                         <td><span id="reservation_sum"></span>€</td>
+                   </tr>
+               </tbody>
+        </table>
+ </div>
  
      <%= f.hidden_field :room_id, value: @room.id %> 
  
      <%= f.hidden_field :price, value: @room.price %>
+     
+     <%= f.hidden_field :total, id: 'reservation_total' %>
  
  <br>
  
  <br>
  
-     <%= f.submit "Ask for a reservation ", class: "btn btn-primary" %>
+     <%= f.submit "Ask for a reservation ", class: "btn btn-primary wide" %>
  
  <% end %>
  
