--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h2>Bienvenue sur notre première page !!</h2>
+<h2>Welcome on CCasa !!</h2>
 
 <%= link_to 'Inscription', new_user_registration_path %> 
 <%= link_to 'Identification', new_user_session_path %>
