--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,83 +1,186 @@
 <%= form_for([@room, @room.reservations.new]) do |f| %>     
  
  <div class="row">
-        <div class="col-md-12 price_tag">
+        <div class="col-md-10 price_tag">
             <span>$ <%= @room.price %></span>
             <span class="pull-right">Per night</span>
         </div>
     </div>
  
-<div class="row">
- 
-         <div class="col-md-6">
- 
-         <label>Arrival</label>
- 
-         <%= f.text_field :start_date, readonly: 'true', placeholder: 'dd/mm/aaaa', class: 'form-control' %>
- 
-         </div>
- 
-         <div class="col-md-6">
- 
-         <label>Departure</label>
- 
-         <%= f.text_field :end_date, readonly: 'true', placeholder: 'dd/mm/aaaa', class: 'form-control' %>
- 
-         </div>
- 
- </div>
- 
- <div id="preview" style="display: none">
-       <table class="reservation-table" >
-               <tbody>
-                    <tr>
-                        <td>Night(s)</td>
-                        <td><span id="reservation_days"></span></td>
-                    </tr>
-                    <tr>
-                         <td>Total</td>
-                         <td><span id="reservation_sum"></span>€</td>
-                   </tr>
-               </tbody>
-        </table>
- </div>
- 
-     <%= f.hidden_field :room_id, value: @room.id %> 
- 
-     <%= f.hidden_field :price, value: @room.price %>
+    <div class="row">
+
+             <div class="col-md-6">
+             <label>Check-in</label>
+             <%= f.text_field :start_date, readonly: 'true', placeholder: 'dd/mm/aaaa', class: 'form-control' %>
+             </div>
      
-     <%= f.hidden_field :total, id: 'reservation_total' %>
+             <div class="col-md-6">
+             <label>Check-out</label>
+             <%= f.text_field :end_date, readonly: 'true', placeholder: 'dd/mm/aaaa', class: 'form-control', disabled: 'true' %>
+             </div>
+     </div>
+     
+     <h5><div id="message"></div></h5>
  
- <br>
+     <div id="preview" style="display: none">
+           <table class="reservation-table" >
+                   <tbody>
+                        <tr>
+                            <td>Night(s)</td>
+                            <td><span id="reservation_days"></span></td>
+                        </tr>
+                        <tr>
+                             <td>Total</td>
+                             <td><span id="reservation_sum"></span>€</td>
+                       </tr>
+                   </tbody>
+            </table>
+     </div>
+     
+         <%= f.hidden_field :room_id, value: @room.id %> 
+     
+         <%= f.hidden_field :price, value: @room.price %>
+         
+         <%= f.hidden_field :total, id: 'reservation_total' %>
+     
+     <br>
+     
+     <br>
+     
+         <%= f.submit "Ask for a reservation ", class: "btn btn-primary wide", id: 'btn_book', disabled: 'true' %>
+     
+    <% end %>
  
- <br>
- 
-     <%= f.submit "Ask for a reservation ", class: "btn btn-primary wide" %>
- 
- <% end %>
- 
- <script>
- 
- $(function() {
- 
-       $('#reservation_start_date').datepicker({
- 
-                           dateFormat: 'dd-mm-yy',
-                           monthNames: ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'],
-                           dayNamesMin: ['S', 'M', 'T', 'W', 'T', 'F', 'S']                              
- 
+<script>
+    function unavailable(date) {
+        dmy = date.getDate() + "-" + (date.getMonth() + 1) + "-" + date.getFullYear();
+        return [$.inArray(dmy, unavailableDates) == -1];
+    }
+    $(function(){
+        
+        unavailableDates = [];
+        
+        $.ajax({
+            url: '/preload',
+            data: {'room_id': <%= @room.id %>},
+            dataType: 'json',
+            success: function(data) {
+                $.each(data, function(arrID, arrValue){
+                    for(var d = new Date(arrValue.start_date); d <= new Date(arrValue.end_date);
+                    d.setDate(d.getDate() +1)) {
+                        unavailableDates.push($.datepicker.formatDate('d-m-yy', d));
+                    }
+                })
+                
+                $('#reservation_start_date').datepicker({
+                    dateFormat: 'dd-mm-yy',
+                    monthNames:['January','February','March','April','May','June','July','August',
+                    'September','October','November','December'],
+                    dayNamesMin: ['S','M','T','W','T','F','S'],
+                    minDate: 0,
+                    maxDate: '6m',
+                    beforeShowDay: unavailable,
+                    onSelect: function(selected) {
+                        var newdate = new Date($("#reservation_start_date").datepicker("getDate"));
+                        newdate.setDate(newdate.getDate() + 1);
+                        $('#reservation_end_date').datepicker("option","minDate", newdate);
+                        $('#reservation_end_date').attr('disabled', false);
+                        
+                        var start_date = $(this).datepicker('getDate');
+                        var end_date = $('#reservation_end_date').datepicker('getDate');
+                        var diff = (end_date - start_date)/1000/60/60/24;
+                        var days = Math.round(diff);
+                        
+                        
+                        var input = {
+                            'start_date': start_date,
+                            'end_date': end_date,
+                            'room_id': <%= @room.id %>
+                            
+                        }
+                            
+                            $.ajax({
+                                url: '/preview',
+                                data: input,
+                                success: function(data) {
+                                    if (data.conflict) {
+                                        $('#message').show();
+                                        $('#message').text("This date range is not available.");
+                                        $('#preview').hide();
+                                        $('#btn_book').attr('disabled', true);
+                                    } else {
+                                        $('#message').hide();
+                                        $('#preview').show();
+                                        $('#btn_book').attr('disabled', false);
+                                        
+                                        var total = days * <%= @room.price %>
+                                        $('#reservation_days').text(days);
+                                        $('#reservation_sum').text(total);
+                                        $('#reservation_total').val(total);
+                                    }
+                                
+                                }
+                            });
+                        
+                    }
+                });
+                
+                $('#reservation_end_date').datepicker({
+                    dateFormat: 'dd-mm-yy',
+                    monthNames: ['January','February','March','April','May','June','July','August',
+                    'September','October','November','December'],
+                    dayNamesMin: ['S','M','T','W','T','F','S'],
+                    minDate: 0,
+                    maxDate: '6m',
+                    beforeShowDay: unavailable,
+                    onSelect: function(selected) {
+                        $('#reservation_start_date').datepicker("option", "maxDate", selected);
+                        
+                        var start_date = $('#reservation_start_date').datepicker('getDate');
+                        var end_date = $(this).datepicker('getDate');
+                        var diff = (end_date - start_date)/1000/60/60/24;
+                        var days = Math.round(diff);
+                        
+                        
+                        var input = {
+                            'start_date': start_date,
+                            'end_date': end_date,
+                            'room_id': <%= @room.id %>
+                            
+                        }
+                            
+                            $.ajax({
+                                url: '/preview',
+                                data: input,
+                                success: function(data) {
+                                    if (data.conflict) {
+                                        
+                                        $('#message').text("This date range is not available.");
+                                        $('#preview').hide();
+                                        $('#btn_book').attr('disabled', true);
+                                    } else {
+                                        $('#message').hide();
+                                        $('#preview').show();
+                                        $('#btn_book').attr('disabled', false);
+                                        
+                                        var total = days * <%= @room.price %>
+                                        $('#reservation_days').text(days);
+                                        $('#reservation_sum').text(total);
+                                        $('#reservation_total').val(total);
+                                    }
+                                
+                                }
+                            });
+                        
+                    }
+                });
+                
+            }
         });
-     $('#reservation_end_date').datepicker({
- 
-                          dateFormat: 'dd-mm-yy',
-                          monthNames: ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'],
-                          dayNamesMin: ['S', 'M', 'T', 'W', 'T', 'F', 'S']                                                                             
- 
-  
-       });
- 
- });
- 
- </script>
+        
+        
+    });
+</script>
+
  
  
