--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -31,7 +31,9 @@ data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <%= image_tag avatar_url(current_user), class: "img-circle avatar-small" %> <%= current_user.fullname %>
               <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><%= link_to "My trips", root_path %></li>
+                <li><%= link_to "My Casas", rooms_path %></li>
+                <li><%= link_to "My reservation", your_reservations_path %></li>
+                <li><%= link_to "My trips", your_trips_path %></li>
                 <li><%= link_to 'Modifiy profile', edit_user_registration_path %></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to 'Deconnexion', destroy_user_session_path, 
