--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -5,6 +5,8 @@
             <ul class="sidebar-list">
  
                    <li class="sidebar-item"><%= link_to "My listings", rooms_path, class: "sidebar-link active" %></li>
+                   <li class="sidebar-item"><%= link_to "My reservations", your_reservations_path, class:"sidebar-link" %></li>
+                   <li class="sidebar-item"><%= link_to "My trips", your_trips_path, class:"sidebar-link" %></li>
  
             </ul>
  
