--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,31 +5,35 @@
                   <%= image_tag avatar_url(@user), class: "avatar-full" %>
  
                   <div class="panel panel-default">
- 
                         <div class="panel-heading">Verification</div>        
- 
                                 <div class="panel-body">
- 
                                        Email: <%= @user.email %><br>
- 
                                        Tél: <%= @user.phone_number %>
- 
                                 </div>
- 
-                         </div>
- 
-                   </div>
+                  </div>
+        </div>
  
           <div class="col-md-9">
- 
                 <h2><%= @user.fullname %></h2>
- 
                 <div class="description row-space-3">
- 
                       <%= @user.description %>
- 
                 </div>
- 
-           </div>
- 
+                
+                <h4>Annonces (<%= @rooms.length %>)</h4><br>
+                    <div class="row">
+                        <% @rooms.each do |room| %>
+                        <div class="col-md-4">
+                            <div class="panel panel-default">
+                                <div class="panel-heading preview">
+                                    <%= image_tag room.photos[0].image.url(:medium) if room.photos.length > 0 %>
+                                </div>
+                                <div class="panel-body">
+                                    <%= link_to room.listing_name, room %>
+                                </div>
+                            </div>
+                        </div>
+                        <% end %>
+                    </div>
+          </div>
+           
  </div>
