Add model review

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
                       <%= @user.description %>
                 </div>
                 
-                <h4>Annonces (<%= @rooms.length %>)</h4><br>
+                <h4>Casas (<%= @rooms.length %>)</h4><br>
                     <div class="row">
                         <% @rooms.each do |room| %>
                         <div class="col-md-4">
