--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -135,6 +135,38 @@
         </div>
         
         <br>
+        <hr>
+        
+        <!-- Reviews -->
+ 
+         <div class="row">
+         
+              <div class="col-md-12">
+         
+                    <h3>Comments <%= @room.average_rating %> (<%= @reviews.count %>)</h3>
+         
+                    <div class="container">
+         
+                        <div>
+         
+                            <%= render 'reviews/form' if @booked && !@hasReview %> 
+         
+                        </div>
+         
+                        <div>
+         
+                            <%= render 'reviews/list' %>
+         
+                        </div>
+         
+                   </div>
+         
+                </div>
+         
+         </div>
+         
+         <br>
+         <hr>
         
         <!-- Google maps -->
         <div class="row">
