amelioration ratings users

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -2,13 +2,13 @@
  
         <div id="user_stars"></div>
  
-        <%= f.text_field :comment %>
+        <%= f.text_field :comment, rows: 3, class: "form-control" %>
  
         <%= f.hidden_field :room_id, value: @room.id %>
  
         <div class="actions"%>
  
-             <%= f.submit %>
+             <%= f.submit "Evaluate", class: "btn btn-primary"%>
  
         </div>
  
