search and home page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -439,3 +439,20 @@ input[type="checkbox"]:checked:before {
   color: #FF0000;
   text-align: center;
  }
+
+.home-link a, p{
+ 
+     color: #82888a;
+ 
+     text-decoration: none;
+ 
+ }
+ 
+  
+.home-link:hover a, .home-link:focus a {
+ 
+     color: #82888a;
+ 
+     text-decoration: none;
+ 
+ }
