--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,77 @@
-<h2>Welcome on CCasa !!</h2>
-
-<%= link_to 'Inscription', new_user_registration_path %> 
-<%= link_to 'Identification', new_user_session_path %>
-<%= link_to 'Deconnexion', destroy_user_session_path, method: :delete %>
+<div class="row">
+    <div class="col-md-8">
+        <div class="text-center">
+            <h1>Book unique accommodations and live your destination as a local.</h1>
+        </div>
+    </div>
+</div>
+<br>
+<%= form_tag search_path, method: :get do %>
+    <div class="row">
+        <div class="col-md-6">
+            <%= text_field_tag :search, params[:search], placeholder: "Where? Destination, city, adress", 
+            class:"form-control" %>
+        </div>
+        <div class="col-md-2">
+            <%= text_field_tag :start_date, params[:start_date], placeholder:"Arrival", class:"form-control" %>
+        </div>
+        <div class="col-md-2">
+            <%= text_field_tag :end_date, params[:end_date], placeholder:"Departure", class:"form-control" %>
+        </div>
+        <div class="col-md-2">
+            <%= submit_tag "Research", class:"btn btn-primary" %>
+        </div>
+    </div>
+<% end %>
+<br>
+<hr>
+<br>
+<div class="row">
+    <div class="col-md-4">
+        <h4>Casas</h4>
+    </div>
+</div>
+<div class="row">
+    <% @rooms.each do |room| %>
+        <div class="col-md-4">
+            <div class="panel panel-default">
+                <div class="panel-heading preview">
+                    <%= image_tag room.photos[0].image.url(:medium) if room.photos.length > 0 %>
+                </div>
+                <div class="panel-body">
+                    <p class="home-link"><b><%= link_to room.price, room_path(room) %> € - <%= link_to room.room_type, room_path(room) %> - <%= link_to pluralize(room.bed_room, "lit"), room_path(room) %></b>
+                    <br><%= link_to room.listing_name, room_path(room) %></p>
+                </div>
+            </div>
+        </div>
+    <% end %>
+</div>
+<script>
+    $(function() {
+        $('#start_date').datepicker({
+                    dateFormat: 'dd-mm-yy',
+                    monthNames: ['January','February','March','April','May','June','Jully','August',
+                    'September','October','November','Décember'],
+                    dayNamesMin: ['S','M','T','W','T','F','S'],
+                    minDate: 0,
+                    maxDate: '3m',
+                    onSelect: function(selected) {
+                        var newdate = new Date($("#start_date").datepicker("getDate"));
+                        newdate.setDate(newdate.getDate() + 1);
+                        $('#end_date').datepicker("option","minDate", newdate);
+                    }
+        });
+        
+        $('#end_date').datepicker({
+                    dateFormat: 'dd-mm-yy',
+                    monthNames: ['January','February','March','April','May','June','Jully','August',
+                    'September','October','November','Décember'],
+                    dayNamesMin: ['S','M','T','W','T','F','S'],
+                    minDate: 0,
+                    maxDate: '3m',
+                    onSelect: function(selected) {
+                        $('#start_date').datepicker("option", "maxDate", selected);
+                    }
+        });
+    })
+</script>
