--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,7 +10,15 @@ data-target="#navbar" aria-expanded="false" aria-controls="navbar">
           </button>
           <%= link_to 'Aiirbnb', root_path, { :class=>"navbar-brand" } %>
         </div>
+        
         <div id="navbar" class="navbar-collapse collapse right">
+            <%= form_tag search_path, class: "navbar-form navbar-left", method: :get do %>
+             <div class="search">
+                 <span class="fa fa-search"></span>
+                 <%= text_field_tag :search, params[:search], placeholder: "Research", class: "form-control" %>
+             </div>
+        <% end %>
+            
           <ul class="nav navbar-nav navbar-right">
             
             <li>
