--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -516,3 +516,17 @@ input[type="checkbox"]:checked:before {
      opacity: 0.5;
  
  }
+ 
+ .conversation {
+ 
+       color: #7f7f7f;
+ 
+       padding: 10px;
+ 
+ }
+ 
+ .conversation:hover, .conversation:focus {
+ 
+     background-color: #F4F4F5;
+ 
+ } 
