--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -26,6 +26,11 @@ data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                <i class="fa fa-home fa-lg"></i> Become host
              <% end %>
            </li>
+           
+           <li>
+             <%= link_to conversations_path do %> Messages
+             <% end %>
+           </li>
             
             <% if (!user_signed_in?) %>
                 <li><%= link_to 'Inscription', new_user_registration_path %></li>
