--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4 col-md-offsset-4 text-center">
+  <div class="col-md-4 col-md-offset-4 text-center">
 
     <h2>Change your password</h2>
     
@@ -12,7 +12,7 @@
         </div>
       
         <div class="form-group">
-          <%= f.password_field :password_confirmation, autocomplete: "off", placeholder:"Confirm new password" %>
+          <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control", placeholder:"Confirm new password" %>
         </div>
       
         <div class="actions">
