--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,10 +12,13 @@
  
                   <div class="panel panel-default">
                         <div class="panel-heading">Verification</div>        
-                                <div class="panel-body">
-                                       Email: <%= @user.email %><br>
-                                       Tél: <%= @user.phone_number %>
-                                </div>
+                        <div class="panel-body">
+                            <% if @user.confirmed_at %>
+                                Confirmed email
+                            <% else %>
+                                Unconfirmed email
+                            <% end %>
+                        </div>
                   </div>
         </div>
  
@@ -77,6 +80,6 @@
                      
                      <% end %>
 
-          </div>
+           </div>
            
  </div>
