--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,21 @@
-<h2>Resend confirmation instructions</h2>
+<div class="row">
+ <div class="col-md-4 col-md-offset-4 text-center">
 
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+    <h2>Resend confirmation instructions</h2>
+    
+    <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+      <%= render "shared/devise_errors" %>
+    
+      <div class="form-group">
+        <p>Enter your associated E-mail. We will send you a link.</p>
+        <%= f.email_field :email, autofocus: true, class:"form-control", placeholder:"E-mail", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+      </div>
+    
+      <div class="actions">
+        <%= f.submit "Resend confirmation instructions", class:"btn btn-primary" %>
+      </div>
+    <% end %>
+    
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+ </div>
+</div>
