--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -28,5 +28,17 @@
       </div>
     <% end %>
     
+    <% unless current_user.confirmed_at? %>
+     <br><br>
+     <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: {
+       method: :post }) do |f| %>
+       <%= f.hidden_field :email, value: current_user.email %>
+       <div class="actions">
+          <%= f.submit "Resend the confirmation email", class: "btn btn-primary" %>
+       </div>
+     })
+     <% end %>
+    <% end %> 
+    
       </div>
     </div>
