--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -529,4 +529,42 @@ input[type="checkbox"]:checked:before {
  
      background-color: #F4F4F5;
  
- } 
+ }
+ 
+ .btn-primary-fb.btn {
+ 
+     border: 1px solid #4568b2;
+ 
+     border-radius: 2px;
+ 
+     font-weight: bold;
+ 
+     background-color: #4568b2;
+ 
+     color: #fff;
+ 
+     padding: 10px 25px 10px 25px;
+ 
+ }
+ 
+  
+.btn-primary-fb.btn:hover, .btn-primary-fb.btn:focus {
+ 
+    border-color: #627aac;
+ 
+    background-color: #627aac;  
+ 
+    outline:none;
+ 
+ }
+ 
+  
+.btn-primary-fb.btn:active {
+ 
+   border-color: #2b2eb2;
+ 
+   background-color: #2b2ebB2;  
+ 
+   outline:none;
+ 
+ }
