--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,15 @@
 <div class="row">
   <div class="col-md-4 col-md-offset-4 text-center">
+    
+    <br>
+ 
+   <%= link_to "Connexion avec Facebook", user_facebook_omniauth_authorize_path, class: "btn btn-primary-fb" %>
+ 
+   <br><br>
+ 
+   <center>or</center>
+ 
+   <hr>
 
     <h2>Sign up</h2>
     
